--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 
             <div class="nav-bar-right">
                 <ul class="navbar-list">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About us</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="http://127.0.0.1:5500/index.html">Home</a></li>
+                    <li><a href="http://127.0.0.1:5500/aboutpage/AboutUs.html">About us</a></li>
+                    <li><a href="http://127.0.0.1:5500/servicepage/services.html">Services</a></li>
+                    <li><a href="http://127.0.0.1:5500/blogpage/blog.html">Blog</a></li>
+                    <li><a href="http://127.0.0.1:5500/contactpage/contact.html">Contact</a></li>
                 </ul>
 
                 <hr class="line">
