--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             </div>
             <div class="link__arrow">
                 <a class="quote-link" href="">Know more about us</a>
-                <!-- <div class="arrow">&#8594;</div> -->
+                <img src="./images/arrow.png" alt="">
             </div>
         </div>
 
@@ -270,9 +270,51 @@
                 <h4 class="grid-container-text">Custom Service</h4>
             </div>
         </div>
+        <div class="learn-arrow">
+            <a href="">Learn About Services</a>
+            <img src="./images/arrow.png" alt="">
+        </div>
 
-        
     </section>
+
+    <section class="experience-section">
+
+        <div class="positioning-images">
+            <img class="car-image" src="./images/car.png" alt="" width="900" height="400">
+            <div class="orange-container">
+                <p>Get in touch with us for your service related query</p>
+                <button type="button">Contact Us</button>
+            </div>
+            <img class="danieltools-image" src="./images/danieltools.jpg" alt="" width="600" height="400">
+        </div>
+
+
+        <div class="experience-container">
+            <div class="experience">
+                <p class="experience-number">20+</p>
+                <p class="experience-text">Proffesional</p>
+            </div>
+            <div class="experience">
+                <p class="experience-number">10+</p>
+                <p class="experience-text">Years Eperience</p>
+            </div>
+            <div class="experience">
+                <p class="experience-number">12K+</p>
+                <p class="experience-text">Service Closed</p>
+            </div>
+            <div class="experience">
+                <p class="experience-number">100%</p>
+                <p class="experience-text">Customer Satisfaction</p>
+            </div>
+
+        </div>
+
+    </section>
+
+    <section class="brands-section">
+
+    </section>
+
 
 
 
