--- a/index.html
+++ b/index.html
@@ -313,6 +313,51 @@
 
     <section class="brands-section">
 
+        <h2>Brands we Serve</h2>
+        <div class="brand-grid-container">
+
+            <div>
+                <img src="./images/brand1..png" alt="" height="100" width="200">
+            </div>
+
+            <div>
+                <img src="./images/brand2.png" alt="" height="100" width="200">
+            </div>
+
+            <div>
+                <img src="./images/brand3.png" alt="" height="100" width="200">
+            </div>
+
+            <div>
+                <img src="./images/brand4.png" alt="" height="100" width="200">
+            </div>
+
+            <div>
+                <img src="./images/brand5.png" alt="" height="100" width="200">
+            </div>
+
+            <div>
+                <img src="./images/brand1..png" alt="" height="100" width="200">
+            </div>
+
+            <div>
+                <img src="./images/brand2.png" alt="" height="100" width="200">
+            </div>
+
+            <div>
+                <img src="./images/brand3.png" alt="" height="100" width="200">
+            </div>
+
+            <div>
+                <img src="./images/brand4.png" alt="" height="100" width="200">
+            </div>
+
+            <div>
+                <img src="./images/brand5.png" alt="" height="100" width="200">
+            </div>
+
+        </div>
+
     </section>
 
 
